fix: fixes an issue where google maps autocomplete appears behind modal

--- a/src/app/features/service-provider/components/pro-account-info/pro-account-info.component.sass
+++ b/src/app/features/service-provider/components/pro-account-info/pro-account-info.component.sass
@@ -68,5 +68,15 @@ main
                     border: none
 
 
+.confirmDelete
+    .buttons
+        margin: 20px 0 0 0
+        @include flex-option($display: flex, $justify-content: null, $align-items: center, $direction: row)
+        gap: 8px
+
+        p-button
+            flex: 1
+        
+
 
         
