--- a/src/styles.sass
+++ b/src/styles.sass
@@ -345,3 +345,7 @@ app-fields.custom .inputs input
 .location
     .p-inputtext
         width: 100%
+
+
+.pac-container
+    z-index: 2000
